# taglib

./: .gitignore  CMakeLists.txt  ConfigureChecks.cmake  baseCommit.txt  build-install-amm-taglib-Windows-debug-x64.bat  build-install-amm-taglib-Windows-debug.bat  build-install-amm-taglib-debug.sh  build-install-general-taglib-Windows-debug-unicode.bat  build-install-general-taglib-Windows-debug-x64-unicode.bat  build-install-general-taglib-Windows-debug-x64.bat  build-install-general-taglib-Windows-debug.bat  build-install-general-taglib-debug-unicode.sh  build-install-general-taglib-debug.sh  config.h.cmake  corali-taglib.rb
.github/workflows/: pr-change-summary.yml
00build/: Makefile
bindings/c/: tag_c.cpp  tag_c.h
documents/: build_branch.md  index.md
examples/: CMakeLists.txt  framelist.cpp  strip-id3v1.cpp  tagreader-general.sh  tagreader.cpp  tagreader.sh  tagreader_c.c  tagwriter.cpp
taglib/: CMakeLists.txt  audioproperties.cpp  audioproperties.h  fileref.cpp  tag.h  taglib_config.h.cmake  taglib_export.h  tagunion.cpp  tagunion.h
taglib/ape/: apefile.cpp  apeitem.cpp  apeproperties.cpp  apeproperties.h  apetag.cpp  apetag.h
taglib/asf/: asfproperties.cpp  asfproperties.h  asftag.cpp  asftag.h
taglib/dff-jbh/: dfffile.cpp  dfffile.h  dffproperties.cpp  dffproperties.h
taglib/dsdiff/: dsdifffile.cpp  dsdifffile.h  dsdiffproperties.cpp  dsdiffproperties.h
taglib/dsf/: dsffile.cpp  dsffile.h  dsfproperties.cpp
taglib/dsf-jbh/: dsffile.cpp  dsffile.h  dsfproperties.cpp  dsfproperties.h
taglib/dsf-kid3-jbh/: CMakeLists.txt  dsffile.cpp  dsffile.h  dsfheader.cpp  dsfheader.h  dsfproperties.cpp  dsfproperties.h
taglib/dsf-taglib-PR/: dsffile.cpp
taglib/dsf-taglib-PR-jbh/: dsffile.cpp  dsfproperties.cpp  dsfproperties.h
taglib/flac/: flacfile.cpp  flacproperties.cpp  flacproperties.h
taglib/it/: itproperties.cpp  itproperties.h
taglib/mod/: modproperties.cpp  modproperties.h  modtag.cpp  modtag.h
taglib/mp4/: mp4atom.cpp  mp4properties.cpp  mp4properties.h  mp4tag.cpp  mp4tag.h
taglib/mpc/: mpcproperties.cpp  mpcproperties.h
taglib/mpeg/: mpegfile.cpp  mpegheader.cpp  mpegproperties.cpp  mpegproperties.h
taglib/mpeg/id3v1/: id3v1tag.cpp  id3v1tag.h
taglib/mpeg/id3v2/: id3v2frame.cpp  id3v2frame.h  id3v2framefactory.cpp  id3v2framefactory.h  id3v2tag.cpp  id3v2tag.h
taglib/mpeg/id3v2/frames/: attachedpictureframe.cpp  commentsframe.cpp  commentsframe.h  generalencapsulatedobjectframe.cpp  ownershipframe.cpp  ownershipframe.h  synchronizedlyricsframe.cpp  synchronizedlyricsframe.h  textidentificationframe.cpp  textidentificationframe.h  unsynchronizedlyricsframe.cpp  unsynchronizedlyricsframe.h  urllinkframe.cpp
taglib/ogg/: xiphcomment.cpp  xiphcomment.h
taglib/ogg/opus/: opusproperties.cpp  opusproperties.h
taglib/ogg/speex/: speexproperties.cpp  speexproperties.h
taglib/ogg/vorbis/: vorbisproperties.cpp  vorbisproperties.h
taglib/riff/: rifffile.cpp
taglib/riff/aiff/: aifffile.cpp  aiffproperties.cpp  aiffproperties.h
taglib/riff/wav/: infotag.cpp  infotag.h  wavfile.cpp  wavproperties.cpp  wavproperties.h
taglib/s3m/: s3mproperties.cpp  s3mproperties.h
taglib/toolkit/: taglib.h  tbytevector.cpp  tdebug.cpp  tdebug.h  tdebuglistener.cpp  tdebuglistener.h  tfile.cpp  tfilestream.cpp  tiostream.h  tstring.cpp  tstring.h
taglib/toolkit/jbh/: DllMacro.h  Logger.cpp  Logger.h  charsetconverter.cpp  charsetconverter.h  charsetdetector.cpp  charsetdetector.h  smartencodingoptionchecker.cpp  smartencodingoptionchecker.h
taglib/trueaudio/: trueaudioproperties.cpp  trueaudioproperties.h
taglib/wavpack/: wavpackproperties.cpp  wavpackproperties.h
taglib/xm/: xmproperties.cpp  xmproperties.h
tests/: CMakeLists.txt  test_asf.cpp  test_bytevector.cpp  test_fileref.cpp  test_mp4.cpp
